fix(navbar): hide admin dash on mobile to restore layout space and fix toggle size completely

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -401,8 +401,8 @@ html {
   font-size: 17px;
   position: relative;
   display: inline-block;
-  width: 52px;
-  height: 28px;
+  width: 64px;
+  height: 34px;
 }
 
 .theme-toggle input {
